Added session list page with pagination.
